db setup and config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#db setting
+spring.datasource.url= jdbc:mysql://localhost:3306/cloudVendor
+spring.datasource.username= anushahadagali
+spring.datasource.password= Animallover@3006
 
+#JPA settings
+spring.jpa.hibernate.ddl-auto=create
